--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -68,7 +68,7 @@ p {
   font-size: 1rem;
   line-height: 1.6;
   margin-bottom: 1rem;
-  text-align: justify;
+  text-align: center;
 }
 
 /* 📱 Mobile */
